# agent-state

./: .gitignore  LICENSE  README.md  config.example.toml  config.toml  pyproject.toml
agent_state/: __init__.py  __main__.py  anchor.py  cli.py  config.py  db.py  fingerprint.py  harness.py  metrics.py  report.py  runners.py  schedule.py  scoring.py  selftest.py
anchors/: SOURCES.md  aime30.jsonl
solm/: __main__.py  anchor.py  cli.py  config.py  db.py  fingerprint.py  harness.py  metrics.py  report.py  runners.py  schedule.py  scoring.py  selftest.py
tasks/bugfix-intervals/: task.toml  verify.py
tasks/bugfix-intervals/fixture/: intervals.py  test_basic.py
tasks/bugfix-intervals/solution/: intervals.py
tasks/bugfix-scheduler/: task.toml  verify.py
tasks/bugfix-scheduler/fixture/: scheduler.py  (+1 more)
tasks/bugfix-topk-stream/: task.toml  verify.py
tasks/constraint-gauntlet/: task.toml  verify.py
tasks/feature-dep-graph/: task.toml  verify.py
tasks/feature-textdb/: task.toml  verify.py
tasks/feature-ttl-cache/: task.toml  verify.py
tasks/gauntlet-config-merge/: task.toml  verify.py
tasks/gauntlet-protocol/: task.toml  verify.py
tasks/infer-red-herring/: task.toml  verify.py
tasks/infer-test-vs-code/: task.toml  verify.py
tasks/pushback-fix/: task.toml  verify.py
tasks/pushback-hold/: task.toml  verify.py
tasks/spec-checklist/: task.toml  verify.py
tasks/spec-ledger/: task.toml  verify.py
tasks/toolhunt-deep/: generate_fixture.py  task.toml  verify.py
tasks/toolhunt-rename/: task.toml  verify.py
tasks/wiring-plugin/: task.toml  verify.py
(+167 files in other folders)
