[project]
name = "state-of-llm"
version = "0.1.0"
description = "Daily vitals for the coding models you actually use. Wake up, read the verdict: code or touch grass."
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.scripts]
solm = "solm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solm"]
