[project]
name = "agent-state"
version = "0.2.0"
description = "Daily vitals for the coding models you actually use. Wake up, read the verdict: code or touch grass."
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.scripts]
agent-state = "agent_state.cli:main"
solm = "agent_state.cli:main"   # short alias, muscle-memory friendly

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_state"]
